Added ecological function and nursery image gallery to index.html. Added nursery.html and added additional plant image cards.

--- a/index.html
+++ b/index.html
@@ -85,24 +85,25 @@
 			<!-- Main -->
 				<main id="main">
 
+					<!-- Intro -->
 					<header class="special container">
 						<span class="icon solid fa-solid fa-seedling"></span>
 						<h2>Since 1985, we've been growing <br><strong>native Virginian plants</strong><br> to help restore our natural ecosystems.</h2> 
-						<p>Our nursery houses the most comprehensive collection of local ecotypes in the region, <br>preserving more than 400 plant varieties, including many rare and critically imperiled species.</p>
+						<p>Our nursery houses the most comprehensive collection of local ecotypes in the region, <br>preserving more than 300 plant varieties, including many rare and critically imperiled species.</p>
 					</header>
 
-					<!-- One -->
+					<!-- Teaser: Ecological Function -->
 						<section class="wrapper style2 container special-alt">
 							<div class="row gtr-50">
 								<div class="col-8 col-12-narrower">
 
 									<header>
-										<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+										<h2>Adding native plants to your landscape increases its <strong>ecological function.</strong></h2>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
+									<p>Native plants support food webs, by providing vegetation and nectar. They also provide habitats, purify the air and water, and absorb carbon dioxide from the atmosphere.</p>
 									<footer>
 										<ul class="buttons">
-											<li><a href="#" class="button">Find Out More</a></li>
+											<li><a href="#" class="button">Learn</a></li>
 										</ul>
 									</footer>
 
@@ -110,10 +111,10 @@
 								<div class="col-4 col-12-narrower imp-narrower">
 
 									<ul class="featured-icons">
-										<li><span class="icon solid fa-seedling"><span class="label">Feature 1</span></span></li>
-										<li><span class="icon solid fa-leaf"><span class="label">Feature 2</span></span></li>
-										<li><span class="icon solid fa-crow"><span class="label">Feature 3</span></span></li>
-										<li><span class="icon solid fa-bug"><span class="label">Feature 3</span></span></li>
+										<li><span class="icon solid fa-seedling"><span class="label">Seedling</span></span></li>
+										<li><span class="icon solid fa-leaf"><span class="label">Leaf</span></span></li>
+										<li><span class="icon solid fa-crow"><span class="label">Bird</span></span></li>
+										<li><span class="icon solid fa-bug"><span class="label">Insect</span></span></li>
 									</ul>
 
 								</div>
@@ -127,65 +128,60 @@
 							<h2>Our Native Plant <strong>Nursery</strong></h2>
 						</header>
 
-						<div class="row">
-							<div class="col-6 col-12-narrower">
-
-								<section>
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-									<header>
-										<h3>A Really Fast Train</h3>
-									</header>
-									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-								</section>
-
+						<div class="gallery">
+							<div class="gallery-item">
+								<a href="#" class="image fit"><img src="images/plant-gallery/arrowwood-viburnum.jpg" alt="" /></a>
+								<span>Arrowwood Viburnum</span>
 							</div>
-							<div class="col-6 col-12-narrower">
-
-								<section>
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-									<header>
-										<h3>An Airport Terminal</h3>
-									</header>
-									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-								</section>
-
+							<div class="gallery-item">
+								<a href="#" class="image fit"><img src="images/plant-gallery/lobelia-cardinalis.webp" alt="" /></a>
+								<span>Red Cardinal Flower</span>
 							</div>
-						</div>
-						<div class="row">
-							<div class="col-6 col-12-narrower">
-
-								<section>
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-									<header>
-										<h3>Hyperspace Travel</h3>
-									</header>
-									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-								</section>
-
+							<div class="gallery-item">
+								<a href="#" class="image fit"><img src="images/plant-gallery/christmas-fern.jpg" alt="" /></a>
+								<span>Christmas Fern</span>
 							</div>
-							<div class="col-6 col-12-narrower">
-
-								<section>
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-									<header>
-										<h3>And Another Train</h3>
-									</header>
-									<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-								</section>
-
+							<div class="gallery-item">
+								<a href="#" class="image fit"><img src="images/plant-gallery/golden-alexander.jpg" alt="" /></a>
+								<span>Golden Alexander</span>
+							</div>
+							<div class="gallery-item">
+								<a href="#" class="image fit"><img src="images/plant-gallery/black-eyed-susan.jpg" alt="" /></a>
+								<span>Black Eyed Susan</span>
+							</div>
+							<div class="gallery-item">
+								<a href="#" class="image fit"><img src="images/plant-gallery/juncus-tenuis.jpg" alt="" /></a>
+								<span>Path Rush</span>
+							</div>
+							<div class="gallery-item">
+								<a href="#" class="image fit"><img src="images/plant-gallery/milkweed-w-bugs.jpeg" alt="" /></a>
+								<span>Common Milkweed</span>
+							</div>
+							<div class="gallery-item">
+								<a href="#" class="image fit"><img src="images/plant-gallery/oakleaf-hydrangea-quercifolia.jpg" alt="" /></a>
+								<span>Oakleaf Hydrangea</span>
+							</div>
+							<div class="gallery-item">
+								<a href="#" class="image fit"><img src="images/plant-gallery/mountain-laurel.jpg" alt="" /></a>
+								<span>Mountain Laurel</span>
 							</div>
 						</div>
 
 						<footer class="major">
 							<ul class="buttons">
-								<li><a href="#" class="button">See More</a></li>
+								<li><a href="nursery.html" class="button">See More</a></li>
 							</ul>
 						</footer>
 
 					</section>
 
 					<!-- Three -->
-						<section class="wrapper style1 container special">
+						<section class="wrapper style2 container special">
+
+							<header class="major">
+								<h2>Our <strong>Services</strong></h2>
+							</header>
+
 							<div class="row">
 								<div class="col-4 col-12-narrower">
 
@@ -247,13 +243,11 @@
 					<ul class="icons">
 						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="#" class="icon brands circle fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Celia Kelly</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</footer>
