Fixed spelling of winterberry

--- a/nursery.html
+++ b/nursery.html
@@ -135,7 +135,7 @@
 								</div>
 								<div class="gallery-item">
 									<a href="#" class="image fit"><img src="images/plant-gallery/winterberry.jpg" alt="" /></a>
-									<span>Winter Berry</span>
+									<span>Winterberry</span>
 								</div>
 							</div>
 	
