Added content to nursery.html, added contact.html, removed unused image files

--- a/index.html
+++ b/index.html
@@ -29,27 +29,16 @@
 					
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Nursery</a></li>
+							<li class="current"><a href="index.html">Home</a></li>
 							<li class="submenu">
-								<a href="#">Menu</a>
+								<a href="#" class="button primary">Menu</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="nursery.html">Nursery</a></li>
+									<li><a href="visit.html">Visit</a></li>
+									<li><a href="learn.html">Learn</a></li>
 									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button primary">Donate</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -86,11 +75,19 @@
 				<main id="main">
 
 					<!-- Intro -->
-					<header class="special container">
-						<span class="icon solid fa-solid fa-seedling"></span>
-						<h2>Since 1985, we've been growing <br><strong>native Virginian plants</strong><br> to help restore our natural ecosystems.</h2> 
-						<p>Our nursery houses the most comprehensive collection of local ecotypes in the region, <br>preserving more than 300 plant varieties, including many rare and critically imperiled species.</p>
-					</header>
+					<section id="intro">
+						<header class="special container">
+							<span class="icon solid fa-solid fa-seedling"></span>
+							<h2>Since 1985, we've been growing <br><strong>native Virginian plants</strong><br> to help restore our natural ecosystems.</h2> 
+							<p>Our nursery houses the most comprehensive collection of local ecotypes in the region, <br>preserving more than 300 plant varieties, including many rare and critically imperiled species.</p>
+						</header>
+						
+						<footer>
+							<ul class="buttons">
+								<li><a href="#" class="button">Visit Us</a></li>
+							</ul>
+						</footer>	
+					</section>
 
 					<!-- Teaser: Ecological Function -->
 						<section class="wrapper style2 container special-alt">
@@ -130,6 +127,18 @@
 
 						<div class="gallery">
 							<div class="gallery-item">
+								<a href="#" class="image fit"><img src="images/plant-gallery/milkweed-w-bugs.jpeg" alt="" /></a>
+								<span>Common Milkweed</span>
+							</div>
+							<div class="gallery-item">
+								<a href="#" class="image fit"><img src="images/plant-gallery/oakleaf-hydrangea-quercifolia.jpg" alt="" /></a>
+								<span>Oakleaf Hydrangea</span>
+							</div>
+							<div class="gallery-item">
+								<a href="#" class="image fit"><img src="images/plant-gallery/mountain-laurel.jpg" alt="" /></a>
+								<span>Mountain Laurel</span>
+							</div>
+							<div class="gallery-item">
 								<a href="#" class="image fit"><img src="images/plant-gallery/arrowwood-viburnum.jpg" alt="" /></a>
 								<span>Arrowwood Viburnum</span>
 							</div>
@@ -153,18 +162,6 @@
 								<a href="#" class="image fit"><img src="images/plant-gallery/juncus-tenuis.jpg" alt="" /></a>
 								<span>Path Rush</span>
 							</div>
-							<div class="gallery-item">
-								<a href="#" class="image fit"><img src="images/plant-gallery/milkweed-w-bugs.jpeg" alt="" /></a>
-								<span>Common Milkweed</span>
-							</div>
-							<div class="gallery-item">
-								<a href="#" class="image fit"><img src="images/plant-gallery/oakleaf-hydrangea-quercifolia.jpg" alt="" /></a>
-								<span>Oakleaf Hydrangea</span>
-							</div>
-							<div class="gallery-item">
-								<a href="#" class="image fit"><img src="images/plant-gallery/mountain-laurel.jpg" alt="" /></a>
-								<span>Mountain Laurel</span>
-							</div>
 						</div>
 
 						<footer class="major">
@@ -175,7 +172,7 @@
 
 					</section>
 
-					<!-- Three -->
+					<!-- Services -->
 						<section class="wrapper style2 container special">
 
 							<header class="major">
@@ -188,9 +185,9 @@
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
-											<h3>This is Something</h3>
+											<h3>Landscape Design</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>After an initial site consultation, we will draft a comprehensive design proposal and visual mock-up, tailored to your needs and terrain. You will have several opportunities to provide feedback on the plan in the design stage.</p>
 									</section>
 
 								</div>
@@ -199,9 +196,9 @@
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
-											<h3>Also Something</h3>
+											<h3>Plant Installation</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>When the day comes to install your new garden or meadow, we guarantee the process will be easy and worry-free. Our reliable staff will take care of everything so you don't have to.</p>
 									</section>
 
 								</div>
@@ -210,9 +207,9 @@
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
-											<h3>Probably Something</h3>
+											<h3>Invasive Species Removal</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>Our knowledegeable staff are experts in identifying and extirpating hard-to-kill invasive species like English ivy, Japanese stiltgrass, autumn olive, oriental bittersweet, winter creeper, and bush honeysuckle.</p>
 									</section>
 
 								</div>
@@ -225,13 +222,13 @@
 				<section id="cta">
 
 					<header>
-						<h2>Ready to do <strong>something</strong>?</h2>
-						<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
+						<h2>Ready to <strong>go native</strong>?</h2>
+						<p>We'd love to hear about your landscaping needs!</p>
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="#" class="button primary">Take My Money</a></li>
-							<li><a href="#" class="button">LOL Wut</a></li>
+							<li><a href="contact.html" class="button primary">Contact Us</a></li>
+							<li><a href="visit.html" class="button">Visit</a></li>
 						</ul>
 					</footer>
 
@@ -240,6 +237,22 @@
 			<!-- Footer -->
 				<footer id="footer">
 
+					<address>
+						<div>
+							<a href="" class="icon contact solid fa-location-arrow"></a>
+							<p>3233 Duke St <br>
+								Alexandria, VA 22314</p>
+						</div>
+						<div>
+							<a href="" class="icon contact solid fa-phone"></a>
+							<p>(555) 232-9846</p>
+						</div>
+						<div>
+							<a href="mailto:matt@blackbearnativeplants.com" class="icon contact solid fa-envelope"></a>
+							<p>matt@blackbearnativeplants.com</p>
+						</div>
+					</address>
+
 					<ul class="icons">
 						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -247,7 +260,7 @@
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; Celia Kelly</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="http://www.celiackelly.com">&copy; Celia Kelly</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</footer>
