--- a/nursery.html
+++ b/nursery.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Twenty by HTML5 UP</title>
+		<title>Nursery</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,30 +17,27 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+					<div id="logo">
+						<a href="index.html">
+							<img src="images/bear.svg">
+							<h1>Black Bear 
+								<span>Native Plants</span>
+							</h1>
+						</a>
+					</div>
+					
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
+							<li class="current"><a href="index.html">Home</a></li>
 							<li class="submenu">
-								<a href="#">Layouts</a>
+								<a href="#" class="button primary">Menu</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="nursery.html">Nursery</a></li>
+									<li><a href="nursery.html#location">Visit</a></li>
+									<li><a href="nursery.html#location">Learn</a></li>
 									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -49,34 +46,33 @@
 				<section id="main">
 
 					<header class="special container">
-						<span class="icon solid fa-mobile-alt"></span>
-						<h2>And finally there's <strong>No Sidebar</strong></h2>
-						<p>Where that in the center faces the nameless horrors alone.</p>
+						<span class="icon solid fa-leaf"></span>
+						<h2>Our Native Plant <strong>Nursery</strong></h2>
+						<p>Hundreds of local Virginian native varieties, grown with care from seed.</p>
+						<img class="image-main" src="images/nursery.jpg" alt="">
 					</header>
 
-					<!-- One -->
-						<section class="wrapper style4 container">
-
-							<!-- Content -->
-								<div class="content">
-									<section>
-										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>Dolore Amet Consequat</h3>
-										</header>
-										<p>Add desciptive text here</p>
-									</section>
-								</div>
-
-						</section>
+					<!-- Native Plant Gallery -->
 					
 						<section class="wrapper style3 container special">
 
 							<header class="major">
-								<h2>Our Native Plant <strong>Nursery</strong></h2>
+								<h2>Our <strong>Selection</strong></h2>
 							</header>
 	
 							<div class="gallery">
+								<div class="gallery-item">
+									<a href="#" class="image fit"><img src="images/plant-gallery/milkweed-w-bugs.jpeg" alt="" /></a>
+									<span>Common Milkweed</span>
+								</div>
+								<div class="gallery-item">
+									<a href="#" class="image fit"><img src="images/plant-gallery/oakleaf-hydrangea-quercifolia.jpg" alt="" /></a>
+									<span>Oakleaf Hydrangea</span>
+								</div>
+								<div class="gallery-item">
+									<a href="#" class="image fit"><img src="images/plant-gallery/mountain-laurel.jpg" alt="" /></a>
+									<span>Mountain Laurel</span>
+								</div>
 								<div class="gallery-item">
 									<a href="#" class="image fit"><img src="images/plant-gallery/arrowwood-viburnum.jpg" alt="" /></a>
 									<span>Arrowwood Viburnum</span>
@@ -100,18 +96,6 @@
 								<div class="gallery-item">
 									<a href="#" class="image fit"><img src="images/plant-gallery/juncus-tenuis.jpg" alt="" /></a>
 									<span>Path Rush</span>
-								</div>
-								<div class="gallery-item">
-									<a href="#" class="image fit"><img src="images/plant-gallery/milkweed-w-bugs.jpeg" alt="" /></a>
-									<span>Common Milkweed</span>
-								</div>
-								<div class="gallery-item">
-									<a href="#" class="image fit"><img src="images/plant-gallery/oakleaf-hydrangea-quercifolia.jpg" alt="" /></a>
-									<span>Oakleaf Hydrangea</span>
-								</div>
-								<div class="gallery-item">
-									<a href="#" class="image fit"><img src="images/plant-gallery/mountain-laurel.jpg" alt="" /></a>
-									<span>Mountain Laurel</span>
 								</div>
 								<div class="gallery-item">
 									<a href="#" class="image fit"><img src="images/plant-gallery/partridge-pea.jpg" alt="" /></a>
@@ -141,7 +125,7 @@
 	
 							<footer class="major">
 								<ul class="buttons">
-									<li><a href="nursery.html" class="button">See More</a></li>
+									<li><a href="#" class="button">More</a></li>
 								</ul>
 							</footer>
 	
@@ -150,21 +134,37 @@
 					</section>
 
 			<!-- Footer -->
-				<footer id="footer">
 
-					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
-					</ul>
+			<!-- Footer -->
+			<footer id="footer">
 
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+				<address>
+					<div>
+						<a href="" class="icon contact solid fa-location-arrow"></a>
+						<p>3233 Duke St <br>
+							Alexandria, VA 22314</p>
+					</div>
+					<div>
+						<a href="" class="icon contact solid fa-phone"></a>
+						<p>(555) 232-9846</p>
+					</div>
+					<div>
+						<a href="mailto:matt@blackbearnativeplants.com" class="icon contact solid fa-envelope"></a>
+						<p>matt@blackbearnativeplants.com</p>
+					</div>
+				</address>
 
-				</footer>
+				<ul class="icons">
+					<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon brands circle fa-instagram"><span class="label">Instagram</span></a></li>
+				</ul>
+
+				<ul class="copyright">
+					<li><a href="http://www.celiackelly.com">&copy; Celia Kelly</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+
+			</footer>
 
 		</div>
 
