--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Contact - Twenty by HTML5 UP</title>
+		<title>Contact</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,34 +16,31 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
-					<nav id="nav">
-						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
+			<header id="header">
+				<div id="logo">
+					<a href="index.html">
+						<img src="images/bear.svg">
+						<h1>Black Bear 
+							<span>Native Plants</span>
+						</h1>
+					</a>
+				</div>
+				
+				<nav id="nav">
+					<ul>
+						<li class="current"><a href="index.html">Home</a></li>
+						<li class="submenu">
+							<a href="#" class="button primary">Menu</a>
+							<ul>
+								<li><a href="nursery.html">Nursery</a></li>
+								<li><a href="nursery.html#location">Visit</a></li>
+								<li><a href="nursery.html#location">Learn</a></li>
+								<li><a href="contact.html">Contact</a></li>
+							</ul>
+						</li>
+					</ul>
+				</nav>
+			</header>
 
 			<!-- Main -->
 				<article id="main">
@@ -51,7 +48,7 @@
 					<header class="special container">
 						<span class="icon solid fa-envelope"></span>
 						<h2>Get In Touch</h2>
-						<p>Use the form below to give /dev/null a piece of your mind.</p>
+						<p>How can we help you transform your green space? Let us know! We will do our best to respond within 24 hours.</p>
 					</header>
 
 					<!-- One -->
@@ -87,21 +84,35 @@
 				</article>
 
 			<!-- Footer -->
-				<footer id="footer">
+			<footer id="footer">
 
-					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
-					</ul>
+				<address>
+					<div>
+						<a href="" class="icon contact solid fa-location-arrow"></a>
+						<p>3233 Duke St <br>
+							Alexandria, VA 22314</p>
+					</div>
+					<div>
+						<a href="" class="icon contact solid fa-phone"></a>
+						<p>(555) 232-9846</p>
+					</div>
+					<div>
+						<a href="mailto:matt@blackbearnativeplants.com" class="icon contact solid fa-envelope"></a>
+						<p>matt@blackbearnativeplants.com</p>
+					</div>
+				</address>
 
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+				<ul class="icons">
+					<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon brands circle fa-instagram"><span class="label">Instagram</span></a></li>
+				</ul>
 
-				</footer>
+				<ul class="copyright">
+					<li><a href="http://www.celiackelly.com">&copy; Celia Kelly</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+
+			</footer>
 
 		</div>
 
