Added content to visit.html, removed unused pictures, fixed head and nav across all html pages

--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Contact</title>
+		<link rel="icon" href="images/bear.svg" type="image/icon">
+		<title>Contact | Black Bear Native Plants</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -33,8 +34,8 @@
 							<a href="#" class="button primary">Menu</a>
 							<ul>
 								<li><a href="nursery.html">Nursery</a></li>
-								<li><a href="nursery.html#location">Visit</a></li>
-								<li><a href="nursery.html#location">Learn</a></li>
+								<li><a href="visit.html">Visit</a></li>
+								<li><a href="learn.html">Learn</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</li>
