--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						
 						<footer>
 							<ul class="buttons">
-								<li><a href="#" class="button">Visit Us</a></li>
+								<li><a href="visit.html" class="button">Visit Us</a></li>
 							</ul>
 						</footer>	
 					</section>
@@ -254,7 +254,7 @@
 					</address>
 
 					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/celiackelly" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands circle fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
