--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
 						<header>
 							<div class="hgroup">
-								<h2>NO NONSENSE</h2>
-								<h3>NATIVES</h3>
+								<h2>BLACK BEAR</h2>
+								<h3>NATIVE PLANTS</h3>
 								<img src="images/bear.svg">
 							</div>
 						</header>
